Closed Bug 611934 Opened 15 years ago Closed 14 years ago

[OS/2] Follow up to bug# 598862

Categories

(Core :: General, defect)

x86
OS/2
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b12

People

(Reporter: dave.r.yeo, Assigned: dragtext)

References

Details

Attachments

(1 file, 4 obsolete files)

After checkin 57136:ed1d65957bd0 the build now breaks as so, In file included from I:/comm-central.bak/mozilla/xpcom/glue/FileUtils.cpp:49: ../../dist/include/mozilla/FileUtils.h: In destructor 'mozilla::ScopedClose::~ScopedClose()': ../../dist/include/mozilla/FileUtils.h:82: error: 'close' was not declared in this scope make.exe[6]: *** [FileUtils.o] Error 1 Fix is to include io.h or unistd.h
Attached patch include io.h for close() (obsolete) — Splinter Review
Simple fix, asking Chris for review as it was his patch.
Attachment #490334 - Flags: review?(jones.chris.g)
Blocks: 598862
Attachment #490334 - Attachment is obsolete: true
Attachment #490412 - Flags: review?(jones.chris.g)
Attachment #490334 - Flags: review?(jones.chris.g)
+#elif defined(XP_OS2) + return DosSetFileSizeL(PR_FileDesc2NativeHandle(aFD), aLength) == 0; Should we be using the large file API here? I've lost track but aren't we still supporting OS/2 versions older then 4.5?
Comment on attachment 490412 [details] [diff] [review] implement fallocate() and fix build break I can r+ the build-bustage patch but not the fallocate() implementation. You'll need to separate the two and ask for review from :taras on the fallocate impl (or ask taras to r+ this patch, whichever).
Attachment #490412 - Flags: review?(jones.chris.g)
This implements fallocate() on OS/2 and fixes a build break caused by a missing header. Per Comment #3, this version is compatible with earlier versions of OS/2.
Attachment #490412 - Attachment is obsolete: true
Attachment #491104 - Flags: review?(tglek)
Attachment #491104 - Flags: review?(tglek) → review+
bitrot update - carrying over r+ from tglek
Attachment #491104 - Attachment is obsolete: true
Attachment #500476 - Flags: review+
Component: Graphics → General
QA Contact: thebes → general
Comment on attachment 500476 [details] [diff] [review] implement fallocate() and fix build break - v2a practically zero risk for tier1, though in cross-platform files all is ifdef'd for XP_OS2 - NPOTB
Attachment #500476 - Flags: approval2.0?
fixes a typo - carrying over r+ from tglek - see comment 7
Attachment #500476 - Attachment is obsolete: true
Attachment #506293 - Flags: review+
Attachment #506293 - Flags: approval2.0?
Attachment #500476 - Flags: approval2.0?
Assignee: nobody → dragtext
Attachment #506293 - Flags: approval2.0? → approval2.0+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b12
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: