Bug 611934 - OS/2 - implement fallocate() and fix build break; r=taras a=bsmedberg